[tool.poetry]
name = "flask-does-huey"
version = "0.5.1"
description = "Flask extension to use huey task queues"
authors = ["jthop <jh@mode14.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
