[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "flask-does-huey"
description = "Flask extension to use huey task queues"
readme = "README.md"
keywords = ["api", "auth"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "flask",
    "huey",
    'importlib-metadata; python_version<"3.8"',
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "flask_does_huey.__version__"}